[gd_scene load_steps=11 format=3 uid="uid://b7afcsclxvfc2"]

[ext_resource type="Script" path="res://draft/teleporter.gd" id="1_ef6oo"]
[ext_resource type="Resource" uid="uid://cfmpsok3not5c" path="res://resources/rs_placable.tres" id="2_pnb43"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_4udp4"]
height = 1.02824

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_x2ffg"]
albedo_color = Color(1, 0.364706, 0, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_ahrw3"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_jlww3"]
albedo_color = Color(1, 0.364706, 0, 1)

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_evs7u"]
particle_flag_align_y = true
emission_shape = 1
emission_sphere_radius = 1.0
gravity = Vector3(0, 0, 0)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ov47x"]
albedo_color = Color(0, 0.396078, 1, 1)

[sub_resource type="SphereMesh" id="SphereMesh_k5pao"]
material = SubResource("StandardMaterial3D_ov47x")
radius = 0.041
height = 0.095

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_gbr0j"]
albedo_color = Color(0, 0.396078, 1, 1)

[node name="teleporter_node" type="Node3D"]
script = ExtResource("1_ef6oo")
rs_placable = ExtResource("2_pnb43")

[node name="Red" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0.5, 0)
visible = false

[node name="Red_Area" type="Area3D" parent="Red"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0)

[node name="Red_Collision" type="CollisionShape3D" parent="Red/Red_Area"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.45234, 0)
shape = SubResource("CylinderShape3D_4udp4")

[node name="redbase" type="MeshInstance3D" parent="Red/Red_Area"]
transform = Transform3D(1, 0, 0, 0, 0.110486, 0, 0, 0, 1, 0, 0, 0)
material_override = SubResource("StandardMaterial3D_x2ffg")
mesh = SubResource("CylinderMesh_ahrw3")

[node name="GPUParticles3D" type="GPUParticles3D" parent="Red/Red_Area"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.639415, 0)
material_override = SubResource("StandardMaterial3D_jlww3")
visibility_aabb = AABB(-0.492769, -0.579879, -0.500849, 0.985539, 1.15976, 1.0017)
process_material = SubResource("ParticleProcessMaterial_evs7u")
draw_pass_1 = SubResource("SphereMesh_k5pao")

[node name="Blue" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 0.5, 0)
visible = false

[node name="Blue_Area" type="Area3D" parent="Blue"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0)

[node name="Blue_Collision" type="CollisionShape3D" parent="Blue/Blue_Area"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.45234, 0)
shape = SubResource("CylinderShape3D_4udp4")

[node name="bluebase" type="MeshInstance3D" parent="Blue/Blue_Area"]
transform = Transform3D(1, 0, 0, 0, 0.110486, 0, 0, 0, 1, 0, 0, 0)
material_override = SubResource("StandardMaterial3D_gbr0j")
mesh = SubResource("CylinderMesh_ahrw3")

[node name="GPUParticles3D" type="GPUParticles3D" parent="Blue/Blue_Area"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.639415, 0)
visibility_aabb = AABB(-0.492769, -0.579879, -0.500849, 0.985539, 1.15976, 1.0017)
process_material = SubResource("ParticleProcessMaterial_evs7u")
draw_pass_1 = SubResource("SphereMesh_k5pao")

[node name="phantom" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.110486, 0, 0, 0, 1, 0, 0, 0)
visible = false
material_override = SubResource("StandardMaterial3D_x2ffg")
transparency = 0.5
mesh = SubResource("CylinderMesh_ahrw3")

[connection signal="body_entered" from="Red/Red_Area" to="." method="_on_red_body_entered"]
[connection signal="body_exited" from="Red/Red_Area" to="." method="_on_red_body_exited"]
[connection signal="body_entered" from="Blue/Blue_Area" to="." method="_on_blue_body_entered"]
[connection signal="body_exited" from="Blue/Blue_Area" to="." method="_on_blue_body_exited"]
